feat: client get accounts
